[package]
name = "example_hyper"
version = "0.1.0"
authors = ["proelbtn <contact@proelbtn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
hyper-tls = "0.4"

[[example]]
name = "http-get"
path = "examples/http-get.rs"

[[example]]
name = "https-get"
path = "examples/https-get.rs"

[[example]]
name = "http-post"
path = "examples/http-post.rs"

[[example]]
name = "http-server"
path = "examples/http-server.rs"
