[package]
name = "tokio"
version = "0.1.0"
authors = ["proelbtn <contact@proelbtn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.6"
tokio = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
